--- a/website/lectures/lecture09.qmd
+++ b/website/lectures/lecture09.qmd
@@ -12,7 +12,7 @@ Which of the two touchdown plays is more impressive?
   * The 86-yard touchdown pass from Justin Herbert to Ladd McConckey ([video link](https://www.youtube.com/watch?v=Hu9flYe2VrA))
   * The 64-yard touchdown pass from Cooper Rush to KaVontae Turpin ([video link](https://www.youtube.com/watch?v=U0Zp_is-X18))
   
-While these two plays share many similarities --- they were both thrown on 3rd down, out of the shotgun formation with no running back, against the Houston Texans, when the team on offense was trailing, and resulted in a score --- there are some big differences: Herbert and the Chargers needed 26 yards to gain a first down while the Cowboys need only 10; Herber threw his pass from a collapsing pocket while Rush threw with essentially no pressure; McConckey broke at least one tackle after catching the pass.
+While these two plays share many similarities --- they were both thrown on 3rd down, out of the shotgun formation with no running back, against the Houston Texans, when the team on offense was trailing, and resulted in a score --- there are some big differences: Herbert and the Chargers needed 26 yards to gain a first down while the Cowboys need only 10; Herbert threw his pass from a collapsing pocket while Rush threw with essentially no pressure; McConckey broke at least one tackle after catching the pass.
 Based on these qualitative differences, we might view the first touchdown pass as more impressive.
 In this lecture, we introduce *expected points* (EP; @sec-ep) and expected points added (EPA), which together facilitate a more nuanced, *quantitative* comparison of plays.
 Then, using a multilevel model (@sec-multilevel-model), we will identify the players whom we would expect to generate the most expected points per passing attempt. 
@@ -94,7 +94,7 @@ Typically, these features will include things like the time left in the half, th
 :::{.callout-note icon = false}
 ## Definition: Drive Outcome Probabilities
 Given the state of the game at the beginning of a play $\boldsymbol{\mathbf{z}},$ within a drive, for each possible outcome $k \in \left\{\textrm{TD}, \textrm{FG}, \ldots, \textrm{oTD}\right\}$ let $\pi_{k}(\boldsymbol{\mathbf{z}})$ conditional probability that the drives containing plays characterized by $\boldsymbol{\mathbf{z}}$ end in outcome $k.$
-We collect these probabilities into a vector $\boldsymbol{\pi}(\boldsymbol{\mathbf{z}}) = (\pi_{\textrm{TD}}(\boldsymbol{\mathbf{z}}), \ldots, \pi_{\textrm{oppFG}}(\boldsymbol{\mathbf{z}})).$  
+We collect these probabilities into a vector $\boldsymbol{\pi}(\boldsymbol{\mathbf{z}}) = (\pi_{\textrm{TD}}(\boldsymbol{\mathbf{z}}), \ldots, \pi_{\textrm{oFG}}(\boldsymbol{\mathbf{z}})).$  
 :::
 
 :::{.callout-note icon=false}
