--- a/website/slides/raw_slides/slides_07.qmd
+++ b/website/slides/raw_slides/slides_07.qmd
@@ -1,6 +1,6 @@
 ---
-title: "STAT 479: Offensive Credit Allocation"
-subtitle: Run Expectancy
+title: "STAT 479 Lecture 7"
+subtitle: "Offensive Credit Allocation"
 format: revealjs
 execute:
   cache: true
