Add a few exercises

--- a/website/lectures/lecture06.qmd
+++ b/website/lectures/lecture06.qmd
@@ -788,4 +788,4 @@ And the Statcast data is not complete; for instance, it is missing 3 games in wh
 ## Exercises
 
   1. Scrape data from the 2022 and 2023 regular seasons and determine which batters created the most run value.
-  2. Compute a new version of expected runs that conditions on the number of outs, baserunner configuration, and ballpark. Using this new version of expected runs, determine which batters create the most run value for their team. 
+  2. Compute a new version of expected runs that conditions on the number of outs, baserunner configuration, and ballpark. Using this new version of expected runs, determine which batters create the most run value for their team. Does ballpark appear to make much difference?
