--- a/website/lectures/lecture08.qmd
+++ b/website/lectures/lecture08.qmd
@@ -1080,3 +1080,9 @@ pitch_war |>
   dplyr::arrange(dplyr::desc(WAR)) |>
   dplyr::slice_head(n = 10)
 ```
+
+## Exercises
+
+1. We modeled the probability of a batted ball resulting in out using just the batted ball location. Try adjusting for additional factors about the pitch and swing in our GAM. How do the out probabilities and our downstream analysis change when you account for these factors?
+
+
