--- a/website/lectures/lecture10.qmd
+++ b/website/lectures/lecture10.qmd
@@ -1024,3 +1024,6 @@ qb_war |>
   dplyr::slice_head(n = 10)
 ```
 
+## Exercises
+
+1. Repeat the analysis using win probability added instead of expected points added. Note,you do not need to convert from the points to win scale in this re-analysis. Which players appear to contribute the most to their team's overall win probability?
