--- a/website/slides/raw_slides/slides_05.qmd
+++ b/website/slides/raw_slides/slides_05.qmd
@@ -103,11 +103,11 @@ $
 - $\lambda$: trades-off these two terms
 
 ## Analytic Solution
-- For all $\lambda$, minimizer is $
-\hat{\boldsymbol{\alpha}}(\lambda) = \left(\boldsymbol{\mathbf{Z}}^{\top}\boldsymbol{\mathbf{Z}} + \lambda I \right)^{-1}\boldsymbol{\mathbf{Z}}^{\top}\boldsymbol{\mathbf{Y}}.$
+- For all $\lambda$, minimizer is 
+$\hat{\boldsymbol{\alpha}}(\lambda) = \left(\boldsymbol{\mathbf{Z}}^{\top}\boldsymbol{\mathbf{Z}} + \lambda I \right)^{-1}\boldsymbol{\mathbf{Z}}^{\top}\boldsymbol{\mathbf{Y}}.$
 
 - This is *almost* the OLS solution
-  - Slightly perturb $\mathbf{Z}}^{\top}\boldsymbol{\mathbf{Z}}$ so it becomes invertible
+  - Slightly perturb $\boldsymbol{\mathbf{Z}}^{\top}\boldsymbol{\mathbf{Z}}$ so it becomes invertible
   - E.g., by adding $\lambda$ to its diagonal
 
 
@@ -463,7 +463,7 @@ rank(x)
 rank(-1*x)
 ```
 
-## SGA's RAPM Ranking Uncertainty
+## SGA's RAPM Ranking Uncertainty{.smaller}
 
 :::{.panel-tabset}
 
@@ -504,3 +504,18 @@ table(sga_ranks)[1:10]
 quantile(sga_ranks, probs = c(0.025, 0.975))
 ```
 :::
+
+## Looking Ahead{.smaller}
+
+- Lectures 6--8: Building up to wins above replacement in baseball
+- Project Check-in: by **Friday 26 September** email me a short overview of your project
+  - Precise problem statement & overview of data and analysis plan
+  - Happy to help brainstorm & narrow down analysis in Office Hours (or by appt.)
+  - Inspiration: exercises in lecture notes & [project information](../../project1.qmd) page
+
+## Guest Lecture
+- Namita Nandakumar (Director of R&D at Seattle Kraken)
+- "Twitter Is Real Life? Translating Student Research To Team Decision-Making"
+- **Great** perspective on how past public-facing projects inform her current team-centric work
+- 6pm on Tuesday 30 September in Morgridge Hall 1524 (this room)
+
